# ros-vehicle

./: 99-usb-serial.rules  README  README.md
DiscoveryBoard/: .gitignore  Makefile  main.c
SRF08Server/: .gitignore  CMakeLists.txt  README
SRF08Server/src/: CMakeLists.txt  SimpleSerial.C  SimpleSerial.H
catkin_ws/: .gitignore
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/read_discovery_data/: Data.h  IMUData.h
catkin_ws/devel/include/read_imu_data/: IMUData.h
catkin_ws/devel/lib/pkgconfig/: read_discovery_data.pc  read_imu_data.pc  read_joystick_data.pc  read_srf_data.pc  srf08.pc
catkin_ws/devel/lib/srf08/: srf08_listner  srf08_main
catkin_ws/src/: master.launch  master_autopilot.launch  master_dbj.launch  slave.launch
catkin_ws/src/autopilot/: CMakeLists.txt  package.xml
catkin_ws/src/autopilot/scripts/: .autopilot.py.swp  ap_utils.py  autopilot.py  config.py
catkin_ws/src/autopilot/src/: .ap_utils.py.swp  ap_utils.py  autopilot.py
catkin_ws/src/bldc_mc/: CMakeLists.txt  package.xml
catkin_ws/src/bldc_mc/src/: Serial.hpp  bldc_mc.cpp  bldc_mc.hpp  datatypes.h  utils.cpp  utils.hpp
catkin_ws/src/bldc_motor_controller/: CMakeLists.txt  package.xml
catkin_ws/src/bldc_motor_controller/msg/: BLDCValues.msg
catkin_ws/src/bldc_motor_controller/src/: bldc_motor_controller.cpp  bldc_motor_controller.hpp
catkin_ws/src/estimate_position/: CMakeLists.txt  package.xml
catkin_ws/src/estimate_position/msg/: Position.msg
catkin_ws/src/estimate_position/src/: Estimate_pos.cpp  Estimate_pos.hpp  Kalman.cpp  Kalman.hpp  Position.cpp  Position.hpp
catkin_ws/src/get_imu/: CMakeLists.txt  package.xml
catkin_ws/src/get_imu/msg/: IMUData.msg
catkin_ws/src/get_imu/scripts/: listener.py  talker.py
catkin_ws/src/get_uss/: CMakeLists.txt  package.xml
catkin_ws/src/get_uss/msg/: srf08_msg.msg
catkin_ws/src/joy_to_mc_cmds/: CMakeLists.txt  package.xml
catkin_ws/src/listen_to_mc/: CMakeLists.txt  package.xml
catkin_ws/src/read_imu_data/: CMakeLists.txt
catkin_ws/src/read_joystick_data/: CMakeLists.txt  package.xml
catkin_ws/src/read_srf_data/: CMakeLists.txt
catkin_ws/src/srf08/: CMakeLists.txt  package.xml
matlab/: plot_gyro.m
misc/: dead_reckoning.c
project_report/graphs/: rosgraph.dot
tracker/: .gitignore  tracker.py
(+43 files in other folders)
